# shh-match

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-frontend.yml
.github/workflows.backup.250915/: ci-backend.yml  ci-frontend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_dev.py
backend/app/: main.py
backend/app/api/v1/: routes_admin.py  routes_auth.py  routes_likes.py  routes_matches.py  routes_payments.py  routes_profile.py  routes_recs.py
backend/app/core/: config.py  deps.py  scheduling.py  security.py
backend/app/db/: models.py  schemas.py
backend/app/db/crud/: like.py  match.py  payment.py  recommendation.py  user.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_migration.py
backend/app/services/: recommendation_service.py
backend/scripts/: create_admin.py  init_db.py
backend/tests/: conftest.py  test_auth.py
docs/: SHH_Match_backend_spec.md  SHH_Match_monorepo_setup.md  SHH_Match_mvp_next_js_ai_agent_build_spec.md
frontend/: .env.local.example  Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  test.css
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/discover/: page.tsx
frontend/components/: AdminTable.tsx  Footer.tsx  Navbar.tsx  PaymentInstructions.tsx  ProfileCard.tsx  RecommendationList.tsx  providers.tsx
frontend/lib/: api.ts  auth.ts  types.ts  validators.ts
(+13 files in other folders)
